# edge-fabric

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  flake.nix  go.mod  pyproject.toml
.github/workflows/: ci.yml
cmd/: README.md
cmd/direct-slice-demo/: main.go
cmd/edge-fabric/: main.go  main_test.go
cmd/host-agent/: main.go
cmd/site-router/: main.go
cmd/sleepy-cycle-demo/: main.go
contracts/: README.md
contracts/fixtures/: command-servo-set-angle.json  command-sleepy-maintenance-sync.json  command-sleepy-threshold-set.json  event-battery-alert.json  lease-sleepy-leaf.json  manifest-sleepy-leaf.json  state-powered-level.json
contracts/policy/: device-profiles.json  policy.go  policy_test.go  radio-budget.json  role-policy.json  route-classes.json  security-modes.json
contracts/protocol/: ack-phases.json  (+6 more)
docs/: IMPLEMENTATION_ROADMAP.md  KNOWN_LIMITATIONS.md  NIX.md  SECURITY.md  SUPPORT_MATRIX.md
edge-fabric-esp32sx1262-v3-mesh/: .gitignore  README.md
firmware/: README.md
firmware/esp-idf/components/radio_hal_sx1262/: CMakeLists.txt
firmware/esp-idf/components/radio_hal_sx1262/include/: radio_hal_real_sx1262.h  radio_hal_sx1262.h
firmware/esp-idf/components/radio_hal_sx1262/src/: lora_jp_policy.c  radio_hal_real_sx1262.c  radio_hal_sx1262.c
host/: README.md
pkg/: README.md
scripts/: bootstrap.ps1  demo_local_router.py  doctor.py  export_clean_repo.py  simulate_direct_slice.py
sdk/: README.md
src/: README.md
tests/: test_contracts.py  test_host_agent.py  test_site_router.py
(+168 files in other folders)
